--- a/DropdownEumRazorPages/Pages/Shared/_Layout.cshtml
+++ b/DropdownEumRazorPages/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
     <header>
         <div class="alert alert-secondary" role="alert">
-            A simple example using <mark>enum</mark> in a dropdown
+            An example using <mark>enum</mark> in a dropdown. In the dropdown shown below <strong>Select</strong> is invalid via an if statement, not model validation.
         </div>
     </header>
 
