--- a/enum-has-conversion/Models/WineType.tt
+++ b/enum-has-conversion/Models/WineType.tt
@@ -13,16 +13,14 @@
     var columnId = "Id";
     var columnName = "TypeName";
 	var columnDescription = "Description";
-    var connectionString = "Server=(localdb)\\mssqllocaldb;Database=wines;Trusted_Connection=True";
 
-	// Get containing project
-    IServiceProvider serviceProvider = (IServiceProvider)Host;
+    var connectionString = "Server=(localdb)\\mssqllocaldb;Database=EF.Wines;Trusted_Connection=True";
+	IServiceProvider serviceProvider = (IServiceProvider)Host;
 	DTE dte = (DTE)serviceProvider.GetService(typeof(DTE));
 	Project project = dte.Solution.FindProjectItem(Host.TemplateFile).ContainingProject;
 #>
-
-using System;
 using System.CodeDom.Compiler;
+using System.ComponentModel;
 
 namespace <#= project.Properties.Item("DefaultNamespace").Value #><#= Path.GetDirectoryName(Host.TemplateFile).Remove(0, Path.GetDirectoryName(project.FileName).Length).Replace("\\", ".") #>
 {
@@ -34,24 +32,19 @@ namespace <#= project.Properties.Item("DefaultNamespace").Value #><#= Path.GetDi
     {
 <#
     SqlConnection conn = new SqlConnection(connectionString);
-    string command = string.Format("select {0}, {1}, {2} from {3} order by {0}", columnId, columnName, columnDescription, tableName);
+    string command = $"select {columnId}, {columnName}, {columnDescription} from {tableName} order by {columnId}";
     SqlCommand comm = new SqlCommand(command, conn);
 
     conn.Open();
-
     SqlDataReader reader = comm.ExecuteReader();
     bool loop = reader.Read();
 
     while(loop)
     {
-#>      
-		/// <summary>
-        /// <#= reader[columnName] #> 
-        /// </summary>
-        <#= Pascalize(reader[columnName]) #> = <#= reader[columnId] #><# loop = reader.Read(); #><#= loop ? ",\r\n" : string.Empty #>
-<#
+#>        [Description("<#= reader[columnDescription] #>")] 
+        <#= Pascalize(reader[columnName]) #> = <#= reader[columnId] #><# loop = reader.Read(); #><#= loop ? ",\r\n" : string.Empty #><#
     }
-#>  }
+#>}
 }
 <#+
     private string Pascalize(object value)
