--- a/DropdownEumRazorPages/Pages/Index.cshtml
+++ b/DropdownEumRazorPages/Pages/Index.cshtml
@@ -9,6 +9,8 @@
 
 
         <div>
+            <label asp-for="Book.Title" class="mt-2"></label>
+            <input asp-for="Book.Title" class="form-control" />
             <label asp-for="Book.Category" class="mt-2"></label>
             <select asp-for="Book.Category" class="form-select" asp-items="Html.GetEnumSelectList<BookCategories>()">
             </select>
