Refactor WineService and update UI components
- Updated SQL query in WineService.cs to use a constant string for improved readability.
- Changed card background color in Index.cshtml and standardized text casing for consistency.
- Removed Privacy.cshtml and its model, indicating the removal of the privacy policy page.
- Cleaned up using directives and comments in Program.cs for clarity.
- Added a new folder for assets in WineWebApplication.csproj.
- Improved formatting and added an image reference in readme.md for better documentation.

by Karen

--- a/WineWebApplication/Pages/Index.cshtml
+++ b/WineWebApplication/Pages/Index.cshtml
@@ -20,9 +20,9 @@
                 {
                     <div class="col">
                         <div class="card h-100 shadow-sm">
-                            <div class="card-body" style="background-color:lightcyan">
+                            <div class="card-body" style="background-color:aliceblue">
                                 <h3 class="card-title">@wine.Name</h3>
-                                <p class="card-text"><small class="text-muted">Wine ID: @wine.WineId</small></p>
+                                <p class="card-text"><small class="text-muted">Wine Id: @wine.WineId</small></p>
                             </div>
                         </div>
                     </div>
